--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.10.0)
 project(hlbc)
 
-set(${PROJECT}}_VERSION 1.0.0)
+set(${PROJECT}}_VERSION 0.0.1)
 # Compile as C++11, supported in ROS Kinetic and newer
 set(CMAKE_CXX_FLAGS
     "-std=c++14 -march=native -pipe -Wextra -fopenmp -fPIC -pthread -Wall")
@@ -23,9 +23,23 @@ find_package(
              message_generation
              autoware_msgs)
 
-list(APPEND CMAKE_PREFIX_PATH "/home/chufankong/test")
+set(Protobuf_DIR "/home/chufankong/test")
 
-message(WARNING "CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}")
+list(APPEND CMAKE_PREFIX_PATH ${Protobuf_DIR})
+
+# message(WARNING "CMAKE_SYSTEM_PREFIX_PATH: ${CMAKE_SYSTEM_PREFIX_PATH}")
+# message(WARNING "CMAKE_SYSTEM_FRAMEWORK_PATH: ${CMAKE_SYSTEM_FRAMEWORK_PATH}")
+# message(WARNING "CMAKE_SYSTEM_APPBUNDLE_PATH: ${CMAKE_SYSTEM_APPBUNDLE_PATH}")
+
+# message(WARNING "Eigen3_DIR: ${Eigen3_DIR}")
+
+# message(WARNING "CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}") message(WARNING
+# "CMAKE_FRAMEWORK_PATH: ${CMAKE_FRAMEWORK_PATH}") message(WARNING
+# "CMAKE_APPBUNDLE_PATH: ${CMAKE_APPBUNDLE_PATH}")
+
+# message(WARNING "PATH: ${PATH}")
+
+# message(WARNING "CMAKE_SYSTEM_PREFIX_PATH: ${CMAKE_SYSTEM_PREFIX_PATH}")
 
 find_package(Protobuf 3.16.0 EXACT MODULE REQUIRED)
 
@@ -45,31 +59,12 @@ find_package(gflags REQUIRED)
 
 find_package(glog REQUIRED)
 
-message(WARNING "CMAKE_SYSTEM_PREFIX_PATH: ${CMAKE_SYSTEM_PREFIX_PATH}")
-message(WARNING "CMAKE_SYSTEM_FRAMEWORK_PATH: ${CMAKE_SYSTEM_FRAMEWORK_PATH}")
-message(WARNING "CMAKE_SYSTEM_APPBUNDLE_PATH: ${CMAKE_SYSTEM_APPBUNDLE_PATH}")
-
-
-message(WARNING "Eigen3_DIR: ${Eigen3_DIR}")
-
-message(WARNING "CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}")
-message(WARNING "CMAKE_FRAMEWORK_PATH: ${CMAKE_FRAMEWORK_PATH}")
-message(WARNING "CMAKE_APPBUNDLE_PATH: ${CMAKE_APPBUNDLE_PATH}")
-
-message(WARNING "PATH: ${PATH}")
-
-message(WARNING "EIGEN3_INCLUDE_DIR: $ENV{EIGEN3_INCLUDE_DIR}")
-
-
-
-find_package(Eigen3 REQUIRED NO_SYSTEM_ENVIRONMENT_PATH NO_CMAKE_SYSTEM_PATH) 
+find_package(Eigen3 REQUIRED)
 # message(WARNING "Protobuf_LIBRARIES=${Protobuf_LIBRARIES}") message(WARNING
-# "PROTOBUF_INCLUDE_DIRS=${PROTOBUF_INCLUDE_DIRS}")
-if (EIGEN3_FOUND)
-message(WARNING "Eigen3_INCLUDE_DIR=${EIGEN3_INCLUDE_DIR}")
-message(WARNING "Eigen3_LIBRARIES=${EIGEN3_LIBRARIES}")
-endif()
-# message(WARNING "gflags_LIBRARIES=${gflags_LIBRARIES}") message(WARNING
+# "PROTOBUF_INCLUDE_DIRS=${PROTOBUF_INCLUDE_DIRS}") if(Eigen3_FOUND)
+# message(WARNING "EIGEN3_INCLUDE_DIR=${EIGEN3_INCLUDE_DIR}") message(WARNING
+# "Eigen3_LIBRARIES=${Eigen3_LIBRARIES}") endif() message(WARNING
+# "gflags_LIBRARIES=${gflags_LIBRARIES}") message(WARNING
 # "gflags_INCLUDE_DIR=${gflags_INCLUDE_DIR}")
 
 # message(WARNING "glog_LIBRARIES=${glog_LIBRARIES}") message(WARNING
@@ -180,6 +175,7 @@ catkin_package(
   include
   ${PROTO_META_BASE_DIR}
   ${Protobuf_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIR}
   LIBRARIES
   ${PROJECT_NAME}
   ${catkin_LIBRARIES}
@@ -205,7 +201,7 @@ catkin_package(
 # listed before other locations
 include_directories(
   include ${CMAKE_CURRENT_BINARY_DIR} ${catkin_INCLUDE_DIRS}
-  ${Protobuf_INCLUDE_DIRS} ${Eigen3_INCLUDE_DIR} ${PROTO_META_BASE_DIR})
+  ${Protobuf_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR} ${PROTO_META_BASE_DIR})
 
 # Declare a C++ library add_library(${PROJECT_NAME} src/${PROJECT_NAME}/hlbc.cpp
 # )
@@ -214,31 +210,28 @@ include_directories(
 # get_target_property(TARGET_LIBRARIES Project LINK_LIBRARIES)
 # message("Libraries at start") message(${TARGET_LIBRARIES})
 
-# find_library( ${PROJECT_NAME}_PROTO_LIBRARIES_FOUND NAMES
-# ${PROJECT_NAME}_PROTO_LIBRARIES PATHS ${CMAKE_PREFIX_PATH})
-
-# message(WARNING "${${PROJECT_NAME}_PROTO_LIBRARIES_FOUND}")
-
-# if(NOT "${${PROJECT_NAME}_PROTO_LIBRARIES_FOUND}" STREQUAL
-# "${PROJECT_NAME}_PROTO_LIBRARIES_FOUND-NOTFOUND")
-
-# message(WARNING "Removing ${${PROJECT_NAME}_PROTO_LIBRARIES_FOUND}")
-
-# file(REMOVE ${PROJECT_NAME}_PROTO_LIBRARIES_FOUND)
-
-# endif()
-
-# add_library(${PROJECT_NAME}_PROTO_LIBRARIES ${PROTO_SRCS} ${PROTO_HDRS})
-
-# target_link_libraries(${PROJECT_NAME}_PROTO_LIBRARIES ${PROTOBUF_LIBRARIES})
-
 file(GLOB_RECURSE ${PROJECT_NAME}_SOURCE_FILES src/common/*.cpp
      src/control/*.cpp)
 file(GLOB_RECURSE ${PROJECT_NAME}_PROTO_SOURCE_FILES
      ${CMAKE_CURRENT_BINARY_DIR}/*.cc)
 
+# use, i.e. don't skip the full RPATH for the build tree
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+
+# when building, don't use the install RPATH already (but later on when
+# installing)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+set(CMAKE_INSTALL_RPATH ${Protobuf_DIR})
+
+# add the automatically determined parts of the RPATH which point to directories
+# outside the build tree to the install RPATH
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 add_library(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCE_FILES}
                             ${${PROJECT_NAME}_PROTO_SOURCE_FILES})
+
+target_link_libraries(${PROJECT_NAME} ${Protobuf_LIBRARIES} ${catkin_LIBRARIES}
+                      gflags_shared glog::glog)
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
@@ -248,13 +241,7 @@ add_executable(${PROJECT_NAME}_node src/nodes/control_node.cpp)
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
 
-target_link_libraries(
-  ${PROJECT_NAME}_node
-  ${PROJECT_NAME}
-  ${Protobuf_LIBRARIES}
-  ${catkin_LIBRARIES}
-  gflags
-  glog)
+target_link_libraries(${PROJECT_NAME}_node ${PROJECT_NAME})
 # ##############################################################################
 # Install ##
 # ##############################################################################
@@ -309,30 +296,6 @@ install(
   DIRECTORY data/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/data
   PATTERN ".svn" EXCLUDE)
-# install( EXPORT ${PROJECT_NAME}Targets FILE ${PROJECT_NAME}Targets.cmake
-# NAMESPACE ${PROJECT_NAME}:: DESTINATION
-# ${CATKIN_PACKAGE_LIB_DESTINATION}/cmake/${PROJECT_NAME})
-
-# include(CMakePackageConfigHelpers) write_basic_package_version_file(
-# "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}ConfigVersion.cmake"
-# VERSION ${PROJECT}_VERSION COMPATIBILITY AnyNewerVersion)
-
-# export( EXPORT ${PROJECT_NAME}Targets FILE
-# "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}Targets.cmake"
-# NAMESPACE ${PROJECT_NAME}::)
-
-# configure_file( cmake/${PROJECT_NAME}Config.cmake
-# "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}Config.cmake"
-# COPYONLY)
-
-# set(ConfigPackageLocation lib/cmake/${PROJECT_NAME})
-
-# install( EXPORT ${PROJECT_NAME}Targets FILE ${PROJECT_NAME}Targets.cmake
-# NAMESPACE ${PROJECT_NAME}:: DESTINATION ${ConfigPackageLocation})
-
-# install( FILES cmake/${PROJECT_NAME}Config.cmake
-# "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}ConfigVersion.cmake"
-# DESTINATION ${ConfigPackageLocation} COMPONENT Devel)
 
 # Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES # myfile1 # myfile2 DESTINATION
