--- a/src/nodes/.vscode/settings.json
+++ b/src/nodes/.vscode/settings.json
@@ -13,19 +13,14 @@
         "cwctype": "cpp",
         "array": "cpp",
         "atomic": "cpp",
-        "hash_map": "cpp",
-        "hash_set": "cpp",
         "strstream": "cpp",
         "*.tcc": "cpp",
         "bitset": "cpp",
         "chrono": "cpp",
         "complex": "cpp",
-        "condition_variable": "cpp",
         "cstdint": "cpp",
         "deque": "cpp",
-        "list": "cpp",
         "unordered_map": "cpp",
-        "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
         "fstream": "cpp",
@@ -36,7 +31,6 @@
         "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
-        "mutex": "cpp",
         "new": "cpp",
         "ostream": "cpp",
         "numeric": "cpp",
@@ -61,15 +55,6 @@
         "random": "cpp",
         "set": "cpp",
         "string": "cpp",
-        "string_view": "cpp",
-        "csignal": "cpp",
-        "typeindex": "cpp",
-        "forward_list": "cpp",
-        "future": "cpp",
-        "scoped_allocator": "cpp",
-        "regex": "cpp",
-        "valarray": "cpp",
-        "any": "cpp",
-        "variant": "cpp"
+        "string_view": "cpp"
     }
 }
