1. tranform trajectory and COM to Frenet 2. add static trajectory loader to publish a recorded trajectory 3. fix some bugs
TODO: somewhere the vehicle_state.gear() is changed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "regex": "cpp",
         "valarray": "cpp",
         "any": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.inc": "cpp"
     }
 }
