1. add standstill acceleration to prevent low acceleration in taking-off state 2. fix a bug in piecewise_jerk_speed_problem.cpp that would lead P matrix to be non-upper-triangular

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,9 @@
         "valarray": "cpp",
         "any": "cpp",
         "variant": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "core": "cpp",
+        "splines": "cpp",
+        "*.ipp": "cpp"
     }
 }
