--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,6 @@
         "core": "cpp",
         "splines": "cpp",
         "*.ipp": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
